vlib/v/checker/tests/float_lit_exp_without_digit_err.vv
fn main() {
    println(2E)
}
